--- a/capEATSample/src/main/webapp/WEB-INF/web.xml
+++ b/capEATSample/src/main/webapp/WEB-INF/web.xml
@@ -9,4 +9,19 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  
+  
+  
+   <servlet>
+  	<servlet-name>MyFirstServlet</servlet-name>
+  	<servlet-class>capEATSample</servlet-class>
+  	<load-on-startup>1</load-on-startup>
+  </servlet>
+  
+  <servlet-mapping>
+  	<servlet-name>MyFirstServlet</servlet-name>
+  	<url-pattern>/</url-pattern>
+  </servlet-mapping>
+  
+  
 </web-app>
