--- a/CapEat/package.json
+++ b/CapEat/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^4.4.0-RC.0",
     "@angular/router": "^4.4.0-RC.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.3",
+    "bootstrap": "^3.3.7",
     "@uirouter/angular": "^1.0.0-beta.7",
     "core-js": "^2.4.1",
     "rxjs": "^5.4.1",
