--- a/CapEat/package.json
+++ b/CapEat/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve -o",
-    "build": "ng build --prod --env=prod",
+    "build": "ng build --prod --env=prod --base-href=/CapEAT/static/dist --deploy-url=/CapEAT/static/dist/",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -31,7 +31,7 @@
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.3.2",
+    "@angular/cli": "1.2.7",
     "@angular/compiler-cli": "^4.4.0-RC.0",
     "@angular/language-service": "^4.4.0-RC.0",
     "@types/jasmine": "~2.5.53",
