--- a/CapEAT/pom.xml
+++ b/CapEAT/pom.xml
@@ -18,7 +18,7 @@
 			<plugins>
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
-					<artifactId>sonar-maven-plugin</artifactId>
+					<artifactId>exec-maven-plugin</artifactId>
 					<version>1.6.0</version>
 					<executions>
 						<execution>
