history DB updates

--- a/CapEAT/UI_CapEat/package.json
+++ b/CapEAT/UI_CapEat/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve -o",
+    "start": "ng serve -o --proxy-config proxy.config.json",
     "build": "ng build --prod --env=prod --base-href=/CapEAT/static/dist/ --deploy-url=/CapEAT/static/dist/",
     "test": "ng test",
     "lint": "ng lint",
